修复StudentControllerTest中的测试用例，使用Collections.singletonList替代List.of